<resources>
    <string name="app_name">Skinder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="my_posts">My Posts</string>
    <string name="trending_posts">Trending Posts</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="logout">Logout</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="username">Username</string>
    <string name="user_email">user email</string>
    <string name="badge">Badge</string>
    <string name="post_image">Post Image</string>
    <string name="post_title">Post Title</string>
    <string name="post_description">Post Description</string>
    <string name="add_post">Add Post</string>
    <string name="user_points">User Points</string>
    <string name="login">Login</string>
    <string name="add_post_title">Add Post Title</string>
    <string name="add_post_description">Add Post Description</string>
    <string name="upload_image">Upload Image</string>
    <string name="upvotes">Upvotes</string>
    <string name="downvotes">Downvotes</string>
    <string name="comments">Comments</string>
    <string name="author">Author</string>
    <string name="sign_in">Sign In</string>
    <string name="capture">Capture</string>
    <string name="popular_posts">Popular Posts</string>
    <string name="comment">Comment</string>
    <string name="view_replies">View Replies</string>
    <string name="add_comment">Add Comment</string>
    <string name="add">Add</string>
    <string name="add_reply">Add Reply</string>
    <string name="badge_info">Badge Info</string>
</resources>