<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jedischool.skinder.ui.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.jedischool.skinder.ui.fragments.profile.ProfileFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_posts"
        android:name="com.jedischool.skinder.ui.fragments.posts.PostsFragment"
        android:label="@string/my_posts"
        tools:layout="@layout/fragment_posts" />

    <fragment
        android:id="@+id/nav_trending"
        android:name="com.jedischool.skinder.ui.fragments.trending.TrendingFragment"
        android:label="@string/trending_posts"
        tools:layout="@layout/fragment_trending"/>

    <fragment
        android:id="@+id/nav_popular"
        android:name="com.jedischool.skinder.ui.fragments.popular.PopularFragment"
        android:label="@string/popular_posts"
        tools:layout="@layout/fragment_popular"/>

    <fragment
        android:id="@+id/nav_leaderboard"
        android:name="com.jedischool.skinder.ui.fragments.leaderboard.LeaderboardFragment"
        android:label="@string/leaderboard"
        tools:layout="@layout/fragment_leaderboard"/>

</navigation>