<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_comment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/size_2"
    android:layout_marginRight="@dimen/size_2"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="#fff"
    card_view:cardCornerRadius="@dimen/size_5"
    card_view:cardElevation="@dimen/size_2"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_4">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_comment_card"
            android:layout_width="@dimen/size_30"
            android:layout_height="@dimen/size_30"
            android:layout_gravity="center"
            android:contentDescription="@string/profile_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/user"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="2dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_comment_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="@string/username"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/image_comment_card"
            card_view:layout_constraintTop_toTopOf="@+id/image_comment_card" />

        <TextView
            android:id="@+id/comment_comment_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/comment"
            android:textColor="@color/black"
            android:textSize="12sp"
            card_view:layout_constraintEnd_toEndOf="@+id/name_comment_card"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/name_comment_card"
            card_view:layout_constraintTop_toBottomOf="@+id/name_comment_card" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_4"
            android:orientation="horizontal"
            card_view:layout_constraintStart_toStartOf="@+id/comment_comment_card"
            card_view:layout_constraintTop_toBottomOf="@+id/comment_comment_card">

            <ImageView
                android:id="@+id/comment_upvote_icon"
                android:layout_width="@dimen/size_15"
                android:layout_height="@dimen/size_15"
                android:contentDescription="@string/upvotes"
                android:padding="@dimen/size_2"
                android:scaleType="fitCenter"
                android:src="@drawable/up" />

            <TextView
                android:id="@+id/comment_card_upvotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/size_2"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/comment_downvote_icon"
                android:layout_width="@dimen/size_15"
                android:layout_height="@dimen/size_15"
                android:contentDescription="@string/downvotes"
                android:padding="@dimen/size_2"
                android:scaleType="fitCenter"
                android:src="@drawable/down" />

            <TextView
                android:id="@+id/comment_card_downvotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/size_2"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/comment_card_icon"
                android:layout_width="@dimen/size_15"
                android:layout_height="@dimen/size_15"
                android:layout_marginStart="@dimen/size_4"
                android:contentDescription="@string/comments"
                android:padding="@dimen/size_2"
                android:src="@drawable/comment" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>