<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/author_post_detail"
            android:layout_width="@dimen/size_30"
            android:layout_height="@dimen/size_30"
            android:contentDescription="@string/profile_picture"
            android:padding="@dimen/size_4"
            android:src="@drawable/user"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_post_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:hint="@string/post_title"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/author_post_detail"
            app:layout_constraintStart_toEndOf="@+id/author_post_detail"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/desc_post_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/post_description"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/title_post_detail"
            app:layout_constraintTop_toBottomOf="@+id/title_post_detail" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_post_detail" />

        <LinearLayout
            android:id="@+id/add_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <EditText
                android:id="@+id/comment_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="description"
                android:hint="@string/add_comment"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLength="1000" />

            <com.rey.material.widget.Button
                android:id="@+id/comment_add_btn"
                android:layout_width="55dp"
                android:layout_height="42dp"
                android:text="@string/add"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_comments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_comment" />

        <com.rey.material.widget.ProgressView
            android:id="@+id/progress_comments"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/recycler_comments"
            app:pv_autostart="true"
            app:pv_circular="true"
            app:pv_progressMode="indeterminate"
            app:pv_progressStyle="@style/Material.Drawable.CircularProgress" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>